[gd_scene load_steps=9 format=2]

[ext_resource path="res://grid-movement-poc/ActionFrame.gd" type="Script" id=1]
[ext_resource path="res://grid-movement-poc/GUI.gd" type="Script" id=2]
[ext_resource path="res://grid-movement-poc/icon.png" type="Texture" id=3]
[ext_resource path="res://grid-movement-poc/GridCreator.gd" type="Script" id=4]
[ext_resource path="res://grid-movement-poc/Character.gd" type="Script" id=5]
[ext_resource path="res://grid-movement-poc/MovementLine.gd" type="Script" id=6]
[ext_resource path="res://grid-movement-poc/icon_red.png" type="Texture" id=7]
[ext_resource path="res://grid-movement-poc/Enemy.gd" type="Script" id=8]

[node name="GUI" type="Node2D"]
script = ExtResource( 2 )

[node name="ActionFrame" type="Line2D" parent="."]
width = 1.0
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Character" type="Sprite" parent="ActionFrame"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="ActionFrame/Character"]

[node name="GridCreator" type="Line2D" parent="ActionFrame"]
width = 1.0
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 4 )

[node name="MovementLine" type="Line2D" parent="ActionFrame"]
scale = Vector2( 0.5, 0.5 )
points = PoolVector2Array( 67.5, 135.5, 145.5, 273.5 )
script = ExtResource( 6 )

[node name="Enemy" type="Sprite" parent="ActionFrame"]
position = Vector2( 312, 84 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="CharacterInfoView" type="Node2D" parent="."]

[node name="CharacterInfoSprite" type="Sprite" parent="CharacterInfoView"]
position = Vector2( 68, 237 )
texture = ExtResource( 3 )

[node name="CharacterLevelLabel" type="Label" parent="CharacterInfoView"]
margin_left = 33.0
margin_top = 38.0
margin_right = 73.0
margin_bottom = 78.0
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterInfoLabel" type="Label" parent="CharacterInfoView"]
margin_left = 151.0
margin_top = 91.0
margin_right = 255.0
margin_bottom = 131.0
text = "char name
char type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIButton1" type="Button" parent="."]
margin_left = 189.0
margin_top = 23.0
margin_right = 201.0
margin_bottom = 43.0
text = "button 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUIButton2" type="Button" parent="."]
margin_left = 378.0
margin_top = 46.0
margin_right = 444.0
margin_bottom = 66.0
text = "button 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="character_moved" from="." to="ActionFrame/Enemy" method="_on_GUI_character_moved"]
[connection signal="character_level_up" from="ActionFrame/Character" to="." method="_on_Character_character_level_up"]
[connection signal="finished_moving" from="ActionFrame/Character" to="." method="_on_Character_finished_moving"]
[connection signal="tween_all_completed" from="ActionFrame/Character/Tween" to="ActionFrame/Character" method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="ActionFrame/Character/Tween" to="ActionFrame/MovementLine" method="_on_Tween_tween_all_completed"]
[connection signal="tween_started" from="ActionFrame/Character/Tween" to="ActionFrame/MovementLine" method="_on_Tween_tween_started"]
[connection signal="tween_step" from="ActionFrame/Character/Tween" to="ActionFrame/MovementLine" method="_on_Tween_tween_step"]
[connection signal="pressed" from="GUIButton2" to="." method="_on_GUIButton2_pressed"]
